--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -1,3 +1,5 @@
+<!-- Fonts & site CSS -->
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="{{ resources.Get "css/tt.css" | resources.Fingerprint | relURL }}">
+{{ $css := resources.Get "css/tt.css" | resources.Fingerprint }}
+<link rel="stylesheet" href="{{ $css.RelPermalink }}">
