--- a/layouts/shortcodes/yt.html
+++ b/layouts/shortcodes/yt.html
@@ -1,5 +1,6 @@
-<div class="tt-card" style="background:#fff">
-  <strong>{{ .Get "title" }}</strong>
-  <pre style="white-space:pre-wrap;margin:10px 0">{{ .Inner | plainify }}</pre>
-  <button onclick="navigator.clipboard.writeText(this.previousElementSibling.innerText);this.innerText='Copied!';" class="tt-btn" style="padding:8px 12px">Copy prompt</button>
+<div style="position:relative;padding-top:56.25%">
+  <iframe loading="lazy" src="https://www.youtube.com/embed/{{ .Get 0 }}" frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allowfullscreen
+    style="position:absolute;inset:0;width:100%;height:100%;border-radius:12px"></iframe>
 </div>
